--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}
 Пост {{ title }}
-{% endblock %}    
+{% endblock %}
+{% load thumbnail %}
 {% block content %}
 <div class="row">
   <aside class="col-12 col-md-3">
@@ -31,6 +32,9 @@
     </ul>
   </aside>
   <article class="col-12 col-md-9">
+      {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+    <img class="card-img my-2" src="{{ im.url }}">
+  {% endthumbnail %}
     <p>
     {{ post.text }}
     </p>
