--- a/yatube/templates/includes/article.html
+++ b/yatube/templates/includes/article.html
@@ -1,3 +1,4 @@
+{% load thumbnail %}
 <article>
 <ul>{% if main_cite %}
     <li>
@@ -9,6 +10,9 @@
         Дата публикации: {{ post.pub_date|date:"d E Y" }}
     </li>
 </ul>
+{% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+    <img class="card-img my-2" src="{{ im.url }}">
+  {% endthumbnail %}
 <p>{{ post.text }}</p> 
 <a href="{% url 'posts:post_detail' post.pk %}">подробная информация </a>
 <br>{% if not group_list %}
