--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -20,7 +20,7 @@
                 {% endif %}                           
               </div>
               <div class="card-body">        
-                <form method="post" action="{% if is_edit %}{% url 'posts:post_edit' post.id %}{% else %}{% url 'posts:post_create' %}{% endif %}">
+                <form method="post" enctype="multipart/form-data" action="{% if is_edit %}{% url 'posts:post_edit' post.id %}{% else %}{% url 'posts:post_create' %}{% endif %}">
                   {% csrf_token %}
                 {% for field in form %}
                   {% include 'includes/form_template.html' %}
